src/test/ui/async-await/multiple-lifetimes/ret-impl-trait-no-fg.stderr
error: ambiguous lifetime bound in `impl Trait`
  --> $DIR/ret-impl-trait-no-fg.rs:9:64
   |
LL | async fn async_ret_impl_trait<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a, 'b> {
   |                                                                ^^^^^^^^^^^^^^^^^^ neither `'a` nor `'b` outlives the other
   |
   = help: add #![feature(member_constraints)] to the crate attributes to enable

error: ambiguous lifetime bound in `impl Trait`
  --> $DIR/ret-impl-trait-no-fg.rs:9:64
   |
LL | async fn async_ret_impl_trait<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a, 'b> {
   |                                                                ^^^^^^^^^^^^^^^^^^ neither `'a` nor `'b` outlives the other
   |
   = help: add #![feature(member_constraints)] to the crate attributes to enable

error: ambiguous lifetime bound in `impl Trait`
  --> $DIR/ret-impl-trait-no-fg.rs:9:64
   |
LL | async fn async_ret_impl_trait<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a, 'b> {
   |                                                                ^^^^^^^^^^^^^^^^^^ the elided lifetimes here do not outlive one another
   |
   = help: add #![feature(member_constraints)] to the crate attributes to enable

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ret-impl-trait-no-fg.rs:9:1
   |
LL | / async fn async_ret_impl_trait<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a, 'b> {
LL | |
LL | |
LL | |
...  |
LL | |     (a, b)
LL | | }
   | |_^
   |
   = note: hidden type `(&u8, &u8)` captures lifetime '_#4r

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ret-impl-trait-no-fg.rs:9:1
   |
LL | / async fn async_ret_impl_trait<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a, 'b> {
LL | |
LL | |
LL | |
...  |
LL | |     (a, b)
LL | | }
   | |_^
   |
   = note: hidden type `(&u8, &u8)` captures lifetime '_#5r

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0700`.
